chart changes updated

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -31,7 +31,7 @@
   
         <!-- Activity and Chart Section -->
         <div class="row">
-          <div class="col-12 col-md-8 mb-4">
+          <div class="col-12 col-md-6 mb-4">
             <div class="card shadow-sm">
               <div class="card-header">
                 <h5>Recent Activity</h5>
@@ -47,17 +47,13 @@
             </div>
           </div>
   
-          <div class="col-12 col-md-4 mb-4">
+          <div class="col-12 col-md-6 mb-4">
             <div class="card shadow-sm">
               <div class="card-header">
                 <h5>Sales Chart</h5>
               </div>
               <div class="card-body">
-                <div class="chart-container">
-                  <!-- Insert chart here -->
-                  <div style="height: 200px; background: #f0f0f0; text-align: center;">
-                    <span>Chart Placeholder</span>
-                  </div>
+                  <app-sales-chart></app-sales-chart>
                 </div>
               </div>
             </div>
