contact page changes updated

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact-container">
+<div class="contact-container py-5 mt-5" style="margin-left:35%;">
     <h2 class="text-center">Contact Us</h2>
     <p class="text-center">
       Have questions or feedback? We'd love to hear from you!
