--- a/src/app/components/sidemenu/sidemenu.component.html
+++ b/src/app/components/sidemenu/sidemenu.component.html
@@ -1,7 +1,29 @@
-<div class="offcanvas offcanvas-start custom-sidebar" tabindex="-1" id="sidebar" aria-labelledby="sidebarLabel" data-bs-backdrop="false">
+<!-- <div class="offcanvas offcanvas-start custom-sidebar" tabindex="-1" id="sidebar" aria-labelledby="sidebarLabel" data-bs-backdrop="false">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title text-white" id="sidebarLabel">Menu</h5> -->
+      <!-- <button type="button" class="btn-close btn-close-white" (click)="closeSidebar()" aria-label="Close"></button> -->
+    <!-- </div>
+    <div class="offcanvas-body p-0">
+      <ul class="list-group list-group-flush">
+        <a class="list-group-item list-group-item-action d-flex align-items-center" (click)="onClick('/home')">
+          <i class="bi bi-house-door-fill me-3"></i> Home
+        </a>
+        <a class="list-group-item list-group-item-action d-flex align-items-center" (click)="onClick('/about')">
+          <i class="bi bi-info-circle-fill me-3"></i> About
+        </a>
+        <a class="list-group-item list-group-item-action d-flex align-items-center" (click)="onClick('/contact')">
+          <i class="bi bi-envelope-fill me-3"></i> Contact
+        </a>
+      </ul>
+    </div>
+  </div>
+   -->
+
+
+
+  <div class="offcanvas offcanvas-start custom-sidebar" tabindex="-1" id="sidebar" aria-labelledby="sidebarLabel" data-bs-backdrop="false">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title text-white" id="sidebarLabel">Menu</h5>
-      <!-- <button type="button" class="btn-close btn-close-white" (click)="closeSidebar()" aria-label="Close"></button> -->
     </div>
     <div class="offcanvas-body p-0">
       <ul class="list-group list-group-flush">
