--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -42,8 +42,8 @@
               Profile
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/profile" >My Profile</a></li>
-              <li><a class="dropdown-item" href="/settings">Settings</a></li>
+              <li><a class="dropdown-item">My Profile</a></li>
+              <li><a class="dropdown-item">Settings</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="/login" (click)="onProfileClick()">Logout</a></li>
             </ul>
