--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,37 +1,35 @@
-<div class="container py-3" style="margin-left: 10%">
-    <div class="row">
-      <!-- Left Section: Image -->
-      <div class="col-md-6">
-        <div class="about-image">
-          <img src="assets/images/hamly_img.jpg" alt="Logo">
-
-        </div>
-      </div>
-      <!-- Right Section: About Info -->
-      <div class="col-md-6">
-        <h2 class="about-title text-primary">About Us</h2>
-        <p class="lead">
-          We are a leading company in the industry, committed to providing excellent products and services.
-          Our mission is to deliver top-notch solutions that meet the needs of our customers.
-        </p>
-        <p>
-          Established in 2021, we have grown rapidly and earned the trust of numerous clients worldwide. We believe in innovation, excellence, and sustainability. Our team consists of highly skilled professionals who are dedicated to creating positive impacts in every project we undertake.
-        </p>
-        
-        <h4 class="text-muted">Our Vision</h4>
-        <p>
-          To become a global leader in providing innovative, sustainable, and impactful solutions across various industries. 
-        </p>
-  
-        <h4 class="text-muted">Our Values</h4>
-        <ul>
-          <li>Integrity</li>
-          <li>Innovation</li>
-          <li>Excellence</li>
-          <li>Sustainability</li>
-          <li>Customer Satisfaction</li>
-        </ul>
+<div class="container py-3 mt-5" style="margin-left: 10%;height: 100%">
+  <div class="row">
+    <!-- Left Section: Image -->
+    <div class="col-md-6">
+      <div class="about-image">
+        <img src="assets/images/hamly_img.jpg" alt="Logo">
       </div>
     </div>
+    <!-- Right Section: About Info -->
+    <div class="col-md-6">
+      <h2 class="about-title text-primary">About Us</h2>
+      <p class="lead">
+        We are a leading company in the industry, committed to providing excellent products and services.
+        Our mission is to deliver top-notch solutions that meet the needs of our customers.
+      </p>
+      <p>
+        Established in 2021, we have grown rapidly and earned the trust of numerous clients worldwide. We believe in innovation, excellence, and sustainability. Our team consists of highly skilled professionals who are dedicated to creating positive impacts in every project we undertake.
+      </p>
+
+      <h4 class="">Our Vision</h4>
+      <p>
+        To become a global leader in providing innovative, sustainable, and impactful solutions across various industries.
+      </p>
+
+      <h4 class="">Our Values</h4>
+      <ul>
+        <li>Integrity</li>
+        <li>Innovation</li>
+        <li>Excellence</li>
+        <li>Sustainability</li>
+        <li>Customer Satisfaction</li>
+      </ul>
+    </div>
   </div>
-  
+</div>
