--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -2,7 +2,8 @@
     max-width: 600px;
     margin: 2rem auto;
     padding: 1.5rem;
-    background-color: #ffffff;
+    background-color: var(--background-color);
+    color: var(--text-color);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
   
@@ -68,5 +69,17 @@
         cursor: not-allowed;
       }
     }
+  }
+
+  h2{
+    color: var(--text-color), i !important;;
+  }
+
+  p{
+    color: var(--text-color), i !important;;
+  }
+
+  label{
+    color: var(--text-color), i !important;;
   }
   
