--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-left: 15%">
+<div class="container-fluid mt-5" style="margin-left: 10%">
     <div class="row">
       <!-- Main Content Area (Right side) -->
       <div class="col-12 col-md-9 col-lg-10 p-4">
