--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <!-- <button class="btn btn-outline-light me-3" (click)="toggleSidebar()">☰</button>
+          <!-- <button class="btn btn-outline-light me-3" (click)="toggleSidebar()">☰</button>
       <a class="navbar-brand" href="#">MyApp</a> -->
+      <!-- Navbar Toggler for Mobile View -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
+  
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <!-- Notification Icon -->
@@ -45,8 +48,15 @@
               <li><a class="dropdown-item">My Profile</a></li>
               <li><a class="dropdown-item">Settings</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="/login" (click)="onProfileClick()">Logout</a></li>
+              <li><a class="dropdown-item"  (click)="onProfileClick()">Logout</a></li>
             </ul>
+          </li>
+  
+          <!-- Theme Toggle Button -->
+          <li class="nav-item">
+            <button class="btn btn-outline-light me-3" (click)="toggleTheme()">
+              🌓 {{ isDarkMode ? 'Light Mode' : 'Dark Mode' }}
+            </button>
           </li>
         </ul>
       </div>
