--- a/src/app/components/sidemenu/sidemenu.component.html
+++ b/src/app/components/sidemenu/sidemenu.component.html
@@ -36,6 +36,9 @@
         <a class="list-group-item list-group-item-action d-flex align-items-center" (click)="onClick('/contact')">
           <i class="bi bi-envelope-fill me-3"></i> Contact
         </a>
+        <a class="list-group-item list-group-item-action d-flex align-items-center" (click)="onClick('/employee-list')">
+          <i class="bi bi-person-check me-3"></i> Employee
+        </a>
       </ul>
     </div>
   </div>
