--- a/src/app/components/sidemenu/sidemenu.component.html
+++ b/src/app/components/sidemenu/sidemenu.component.html
@@ -24,6 +24,7 @@
   <div class="offcanvas offcanvas-start custom-sidebar" tabindex="-1" id="sidebar" aria-labelledby="sidebarLabel" data-bs-backdrop="false">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title text-white" id="sidebarLabel">Menu</h5>
+      <!-- <button type="button" class="btn-close btn-close-white" (click)="closeSidebar()" aria-label="Close"></button> -->
     </div>
     <div class="offcanvas-body p-0">
       <ul class="list-group list-group-flush">
